# responsible-participation

./: .gitignore  README.md  community-guidelines.md  mkdocs.yml  netlify.toml  pyproject.toml  requirements.txt  zotero.md
docs/: CONTRIBUTING.md  about.md  index.md  zotero.md
docs/blog/: index.md
docs/events/: group.md  index.md  public.md
docs/resources/: case-studies.md  index.md  turing-commons.md  zotero.md
events/: README.md
material/overrides/: home.html
meeting-notes/: (Meeting #2) Facilitating responsible participation in data science.md  (Meeting #3) Facilitating responsible participation in data science.md  (Welcome Meeting) Facilitating responsible participation in data science.md  meeting-1.md  meeting-2.md  meeting-3.md  meeting-4.md  meeting-5.md  meeting-6.md  welcome-meeting.pptx
projects/: README.md  missing-data-and-ethics.md  what-is-responsible-participation.md
seminars/: README.md
