[tool.poetry]
name = "responsible-participation"
version = "0.1.0"
description = "MKDocs site for interest group webpage"
authors = ["Chris <chrisdburr@gmail.com>"]
license = "CC BY 4.0"

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.1.10"
pymdown-extensions = "^9.1"
mkdocs = "^1.2.3"
fontawesome-markdown = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
